--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# funcX Tutorial\n",
     "\n",
-    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any computing resource (aka an endpoint) into a high-performance function serving device. To do this, you deploy a funcX endpoint agent on the endpoint, which integrates your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is built on top of [Parsl](https://parsl-project.org), a funcX endpoint to use large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests. The function service fabric, which is run centrally as a service, is hosted in AWS.\n",
+    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any computing resource into a high-performance function serving device. To do this, you deploy a funcX endpoint agent on the resource, which integrates it into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is built on top of [Parsl](https://parsl-project.org), enabling a funcX endpoint to use large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests. The function service fabric, which is run centrally as a service, is hosted in AWS.\n",
     "\n",
     "Here we provide an example of using funcX to register a function and run it on a publicly available tutorial endpoint."
    ]
@@ -108,9 +108,9 @@
    "source": [
     "endpoint_uuid = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
     "\n",
-    "input = [1, 2, 3, 4, 5]\n",
+    "items = [1, 2, 3, 4, 5]\n",
     "\n",
-    "res = fxc.run(input, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
+    "res = fxc.run(items, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
    ]
   },
@@ -131,13 +131,6 @@
    "source": [
     "fxc.get_result(res)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -156,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
