Function searching in docs tutorial notebook

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -81,8 +81,42 @@
    "outputs": [],
    "source": [
     "func_uuid = fxc.register_function(funcx_sum,\n",
-    "                                  description=\"A summation function\")\n",
+    "                                  description=\"tutorial summation\", public=True)\n",
     "print(func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching a function\n",
+    "\n",
+    "You can search previously registered functions to which you have access using `search_function`.  The first parameter `q` is searched against all the fields, such as author, description, function name, and function source. You can navigate through pages of results with the `offset` and `limit` keyword args.  \n",
+    "\n",
+    "The object returned is simple wrapper on a list, so you can index into it, but also can have a pretty-printed table.  \n",
+    "\n",
+    "To make use of the results, you can either just use the `function_uuid` field returned for each result, or for functions that were registered with recent versions of the service, you can load the source code using the search results object's `load_result` method.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_results = fxc.search_function(\"tutorial\", offset=0, limit=5)\n",
+    "print(search_results[0])\n",
+    "print(search_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_results.load_result(0)\n",
+    "result_0_uuid = search_results[0]['function_uuid']"
    ]
   },
   {
@@ -149,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
