Adding batch and exception examples

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -135,13 +135,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "endpoint_uuid = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "endpoint_uuid = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
-    "\n",
     "items = [1, 2, 3, 4, 5]\n",
     "\n",
     "res = fxc.run(items, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
@@ -155,6 +162,74 @@
     "You can now retrieve the result of the invocation using `get_result()` on the UUID of the task. \n",
     "\n",
     "##### Note: We remove the task from our database once the result has been retrieved, thus you can only retireve the result once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fxc.get_result(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running batches\n",
+    "\n",
+    "You might want to invoke many function calls at once.  This can be easily done via the batch interface:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squared(x):\n",
+    "    return x**2\n",
+    "squared_uuid = fxc.register_function(squared, searchable=False)\n",
+    "\n",
+    "inputs = list(range(10))\n",
+    "batch = fxc.create_batch()\n",
+    "\n",
+    "for x in inputs:\n",
+    "    batch.add(x, endpoint_id=endpoint_uuid, function_id=squared_uuid)\n",
+    "    \n",
+    "batch_res = fxc.batch_run(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fxc.get_batch_status(batch_res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Catching exceptions\n",
+    "\n",
+    "When functions fail, the exception is captured, and reraised when you try to get the result.  In the following example, the 'deterministic failure' exception is raised when `fxc.get_result` is called on the failing function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def failing():\n",
+    "    raise Exception(\"deterministic failure\")\n",
+    "failing_uuid = fxc.register_function(failing, searchable=False)\n",
+    "\n",
+    "res = fxc.run(endpoint_id=endpoint_uuid, function_id=failing_uuid)"
    ]
   },
   {
