explaining why we need search scope

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "#### Authentication\n",
     "\n",
-    "Instantiating a client will force an authentication flow where you will be asked to authenticate with Globus Auth. Every interaction with funcX is authenticated to allow us to enforce access control on both functions and endpoints. As part of the authentication process we request access to your identity information (to retrieve your email address), Globus Groups management access, and Globus Search. We require Groups access in order to facilitate sharing.  Globus Search allows funcX to add your fun"
+    "Instantiating a client will force an authentication flow where you will be asked to authenticate with Globus Auth. Every interaction with funcX is authenticated to allow us to enforce access control on both functions and endpoints. As part of the authentication process we request access to your identity information (to retrieve your email address), Globus Groups management access, and Globus Search. We require Groups access in order to facilitate sharing.  Globus Search allows funcX to add your functions to a searchable registry and make them discoverable to permitted users (as well as yourself!).  "
    ]
   },
   {
