--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -262,18 +262,20 @@
     "for i in range(3):\n",
     "    estimates.append(fxc.run(10**5, endpoint_id=tutorial_endpoint, function_id=pi_function))\n",
     "\n",
+    "# wait for tasks to complete\n",
+    "time.sleep(5)\n",
+    "\n",
     "# wait for all tasks to complete\n",
     "for e in estimates: \n",
-    "    while fxc.get_task(e)['pending']:\n",
+    "    while fxc.get_task(e)['pending'] == 'True':\n",
     "        time.sleep(3)\n",
-    "        print(estimates)\n",
     "\n",
     "# get the results and calculate the total\n",
     "results = [fxc.get_result(i) for i in estimates]\n",
     "total = 0\n",
     "for r in results: \n",
-    "        total += r\n",
-    "        \n",
+    "    total += r\n",
+    "\n",
     "# print the results\n",
     "print(\"Estimates: %s\" % results)\n",
     "print(\"Average: {:.5f}\".format(total/len(results)))"
