Minor tutorial updates

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -289,7 +289,7 @@
     "\n",
     "funcX manages a registry of functions that can be shared, discovered and reused. \n",
     "\n",
-    "When registering a function, you may choose to set a description to support discovery, as well as making it `publc` and/or `searchable`.   "
+    "When registering a function, you may choose to set a description to support discovery, as well as making it `publc` (so that others can run it) and/or `searchable` (so that others can discover it).   "
    ]
   },
   {
@@ -330,7 +330,7 @@
    "source": [
     "# Managing endpoints\n",
     "\n",
-    "funcX endpoints advertise whether or not they are online as well as information about their avaialble resources, queued tasks, and other information. If you are permitted to execute functions on an endpoint you can also retrieve the status of the endpoint. The following example shows how to look up the status (online or offline) and the number of workers connected to the endpoint. "
+    "funcX endpoints advertise whether or not they are online as well as information about their avaialble resources, queued tasks, and other information. If you are permitted to execute functions on an endpoint you can also retrieve the status of the endpoint. The following example shows how to look up the status (online or offline) and the number of number of waiting tasks and workers connected to the endpoint. "
    ]
   },
   {
@@ -342,7 +342,8 @@
     "endpoint_status = fxc.get_endpoint_status(tutorial_endpoint)\n",
     "\n",
     "print(\"Status: %s\" % endpoint_status['status'])\n",
-    "print(\"Workers: %s\" % len(endpoint_status['logs']))"
+    "print(\"Workers: %s\" % endpoint_status['logs'][0]['total_workers'])\n",
+    "print(\"Tasks: %s\" % endpoint_status['logs'][0]['outstanding_tasks'])"
    ]
   },
   {
@@ -369,7 +370,7 @@
     "def squared(x):\n",
     "    return x**2\n",
     "\n",
-    "squared_function = fxc.register_function(squared, searchable=False)\n",
+    "squared_function = fxc.register_function(squared)\n",
     "\n",
     "inputs = list(range(10))\n",
     "batch = fxc.create_batch()\n",
