grammar and spelling fixes

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# funcX Tutorial\n",
     "\n",
-    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to register functions in a cloud-hosted service and then reliably execute those functions on a remote funcX endpoint. This tutorial is configured to use a tutorial endpoint hosted by the funcX team. You can setup and use your own endpoint by following the [funcX documentation](https://funcx.readthedocs.io/en/latest/endpoints.html)"
+    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to register functions in a cloud-hosted service and then reliably execute those functions on a remote funcX endpoint. This tutorial is configured to use a tutorial endpoint hosted by the funcX team. You can set up and use your own endpoint by following the [funcX documentation](https://funcx.readthedocs.io/en/latest/endpoints.html)"
    ]
   },
   {
@@ -15,11 +15,13 @@
    "source": [
     "## funcX Python SDK\n",
     "\n",
-    "The funcX Python SDK provides programming abstractions for interacting with the funcX service. Before running this tutorial you should first install the funcX SDK as follows:\n",
+    "The funcX Python SDK provides programming abstractions for interacting with the funcX service. Before running this tutorial locally, you should first install the funcX SDK as follows:\n",
     "\n",
     "    $ pip install funcx\n",
     "\n",
-    "The funcX SDK exposes a `FuncXClient` object for all interactions with the funcX service. In order to use the funcX service you must first authenticate using one of hundreds of supported identity provides (e.g., your institution, ORCID, Google).  As part of the authenticaiton process you must grant permission for funcX to access your identity information (to retrieve your email address), Globus Groups management access (to share functions and endpoints), and Globus Search (to discover functions and endpoints). "
+    "(If you are running on binder, we've already done this for you in the binder environment.)",
+    "\n",
+    "The funcX SDK exposes a `FuncXClient` object for all interactions with the funcX service. In order to use the funcX service, you must first authenticate using one of hundreds of supported identity providers (e. g., your institution, ORCID, Google).  As part of the authentication process, you must grant permission for funcX to access your identity information (to retrieve your email address), Globus Groups management access (to share functions and endpoints), and Globus Search (to discover functions and endpoints). "
    ]
   },
   {
@@ -43,9 +45,9 @@
     "\n",
     "## Registering a function\n",
     "\n",
-    "funcX works like any other FaaS platform, you must first register a function with funcX before being able to execute it on a remote endpoint. The registration process will serialize the function body and store it securely in the funcX service. As we will see below, you may share functions with others and discover functions shared with you.\n",
+    "funcX works like any other FaaS platform: you must first register a function with funcX before being able to execute it on a remote endpoint. The registration process will serialize the function body and store it securely in the funcX service. As we will see below, you may share functions with others and discover functions shared with you.\n",
     "\n",
-    "Upon registration funcX will return a UUID for the function. This UUID can then be used to manage and invoke the function."
+    "When you register a function, funcX will return a universally unique identifier (UUID) for it. This UUID can then be used to manage and invoke the function."
    ]
   },
   {
@@ -67,11 +69,11 @@
    "source": [
     "## Running a function \n",
     "\n",
-    "To invoke a function, you must provide a) the function's UUID; and b) the `endpoint_id` of the endpoint on which you wish to execute that function. Note: here we use the public funcX tutorial endpoint, you may change the `endpoint_id` to the UUID of any endpoint for which you have permission to execute functions. \n",
+    "To invoke a function, you must provide a) the function's UUID; and b) the `endpoint_id` of the endpoint on which you wish to execute that function. Note: here we use the public funcX tutorial endpoint; you may change the `endpoint_id` to the UUID of any endpoint on which you have permission to execute functions. \n",
     "\n",
-    "funcX functions are designed to be executed remotely and asynchrously. To avoid synchronous invocation, the result of a function invocation (called a `task`) is a UUID which may be introspected to monitor execution status and retrieve results.\n",
+    "funcX functions are designed to be executed remotely and asynchrously. To avoid synchronous invocation, the result of a function invocation (called a `task`) is a UUID, which may be introspected to monitor execution status and retrieve results.\n",
     "\n",
-    "The funcX service will manage the reliable execution of a task, for example by qeueing tasks when the endpoint is busy or offline and retrying tasks in case of node failures.  "
+    "The funcX service will manage the reliable execution of a task, for example, by qeueing tasks when the endpoint is busy or offline and retrying tasks in case of node failures.  "
    ]
   },
   {
@@ -91,7 +93,7 @@
    "source": [
     "## Retrieving results\n",
     "\n",
-    "When the task has completed executing you can access the results via the funcX client as follows."
+    "When the task has completed executing, you can access the results via the funcX client as follows:"
    ]
   },
   {
@@ -109,9 +111,9 @@
    "source": [
     "## Functions with arguments\n",
     "\n",
-    "funcX supports registration and invocation of functions with arbitrary arguments and returned parameters. funcX will serialize any \\*args and \\*\\*kwargs when invoking a function and it will serialize any return parameters or exceptions.  Note: funcX uses standard Python serilaization libraries (e.g., Pickle, Dill) it also limits the size of input arguments and returned parameters to 5MB and \n",
+    "funcX supports registration and invocation of functions with arbitrary arguments and returned parameters. funcX will serialize any \\*args and \\*\\*kwargs when invoking a function and it will serialize any return parameters or exceptions.  Note: funcX uses standard Python serialization libraries (e. g., Pickle, Dill). It also limits the size of input arguments and returned parameters to 5 MB.\n",
     "\n",
-    "The following example shows a function that computes the sum of a list of input arguments. First we register the function as above. "
+    "The following example shows a function that computes the sum of a list of input arguments. First we register the function as above:"
    ]
   },
   {
@@ -130,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When invoking the function you can pass in arguments like any other function, either by position or with keyword arguments. "
+    "When invoking the function, you can pass in arguments like any other function, either by position or with keyword arguments. "
    ]
   },
   {
@@ -180,7 +182,7 @@
    "source": [
     "## Calling external applications\n",
     "\n",
-    "Depending on the configuration of the funcX endpoint you can often invoke external applications that are avaialble in the endpoint environment. \n"
+    "Depending on the configuration of the funcX endpoint, you can often invoke external applications that are avaialble in the endpoint environment. \n"
    ]
   },
   {
@@ -206,7 +208,7 @@
    "source": [
     "## Catching exceptions\n",
     "\n",
-    "When functions fail, the exception is captured and serialized by the funcX endpoint, and reraised when you try to get the result.  In the following example, the 'deterministic failure' exception is raised when `fxc.get_result` is called on the failing function."
+    "When functions fail, the exception is captured and serialized by the funcX endpoint, and is reraised when you try to get the result.  In the following example, the 'deterministic failure' exception is raised when `fxc.get_result` is called on the failing function."
    ]
   },
   {
@@ -231,7 +233,7 @@
    "source": [
     "## Running functions many times\n",
     "\n",
-    "After registering a function you can invoke it repeatedly. The following example shows how the monte carlo method can be used to estimate pi. \n",
+    "After registering a function, you can invoke it repeatedly. The following example shows how the monte carlo method can be used to estimate pi. \n",
     "\n",
     "Specifically, if a circle with radius $r$ is inscribed inside a square with side length $2r$, the area of the circle is $\\pi r^2$ and the area of the square is $(2r)^2$. Thus, if $N$ uniformly-distributed random points are dropped within the square, approximately $N\\pi/4$ will be inside the circle.\n"
    ]
@@ -289,7 +291,7 @@
     "\n",
     "funcX manages a registry of functions that can be shared, discovered and reused. \n",
     "\n",
-    "When registering a function, you may choose to set a description to support discovery, as well as making it `publc` (so that others can run it) and/or `searchable` (so that others can discover it).   "
+    "When registering a function, you may choose to set a description to support discovery, as well as making it `public` (so that others can run it) and/or `searchable` (so that others can discover it).   "
    ]
   },
   {
@@ -309,9 +311,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can search previously registered functions to which you have access using `search_function`.  The first parameter `q` is searched against all the fields, such as author, description, function name, and function source. You can navigate through pages of results with the `offset` and `limit` keyword args.  \n",
+    "You can search previously registered functions to which you have access using `search_function`.  The first parameter is searched against all the fields, such as author, description, function name, and function source. You can navigate through pages of results with the `offset` and `limit` keyword args.  \n",
     "\n",
-    "The object returned is simple wrapper on a list, so you can index into it, but also can have a pretty-printed table.  "
+    "The object returned is a simple wrapper on a list, so you can index into it, but also can have a pretty-printed table.  "
    ]
   },
   {
@@ -330,7 +332,7 @@
    "source": [
     "# Managing endpoints\n",
     "\n",
-    "funcX endpoints advertise whether or not they are online as well as information about their avaialble resources, queued tasks, and other information. If you are permitted to execute functions on an endpoint you can also retrieve the status of the endpoint. The following example shows how to look up the status (online or offline) and the number of number of waiting tasks and workers connected to the endpoint. "
+    "funcX endpoints advertise whether or not they are online as well as information about their available resources, queued tasks, and other information. If you are permitted to execute functions on an endpoint, you can also retrieve the status of the endpoint. The following example shows how to look up the status (online or offline) and the number of number of waiting tasks and workers connected to the endpoint. "
    ]
   },
   {
@@ -358,7 +360,7 @@
     "\n",
     "After registering a function, you might want to invoke that function many times without making individual calls to the funcX service. Such examples occur when running monte carlo simulations, ensembles, and parameter sweep applications. \n",
     "\n",
-    "funcX provides a batch interface which enables specification of a range of function invocations. To use this interface you must create a funcX batch object and then add each invocation to that object. You can then pass the constructed object to the `batch_run` interface. "
+    "funcX provides a batch interface that enables specification of a range of function invocations. To use this interface, you must create a funcX batch object and then add each invocation to that object. You can then pass the constructed object to the `batch_run` interface. "
    ]
   },
   {
