Address issues from PR Review * Made the polling task a subclass of Future * Use batch polling to increase efficiency * Retry calls to funcX get batch status in case of MaxRequestsExceeded

--- a/examples/AsynchFuncX Example.ipynb
+++ b/examples/AsynchFuncX Example.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logging.getLogger('funcx.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "tutorial_endpoint = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
+    "\n",
     "\n",
     "from funcx.sdk.client import FuncXClient\n",
     "fxc = FuncXClient(asynchronous=True)\n"
@@ -22,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'915c017a-3db3-44f8-bb79-46b4503db216'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sum1(nums):\n",
     "    import time\n",
@@ -48,20 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending coro=<FuncXTask.get_result() running at /Users/bengal1/dev/funcx/funcX/funcx_sdk/funcx/sdk/asynchronous/funcx_task.py:21>>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "task = fxc.run([1,2,3,45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
     "task\n"
@@ -69,21 +60,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "117\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "await task\n",
     "print(task.result())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def boom(l):\n",
+    "    return l/0\n",
+    "\n",
+    "func_id2 = fxc.register_function(boom)\n",
+    "func_id2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task2 = fxc.run([1,2,3,45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
+    "await task2\n",
+    "print(task2.result())\n",
+    "\n",
+    "\n"
    ]
   },
   {
