get_batch_result() Updated

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "    $ pip install funcx\n",
     "\n",
-    "(If you are running on binder, we've already done this for you in the binder environment.)",
+    "(If you are running on binder, we've already done this for you in the binder environment.)\n",
     "\n",
     "The funcX SDK exposes a `FuncXClient` object for all interactions with the funcX service. In order to use the funcX service, you must first authenticate using one of hundreds of supported identity providers (e. g., your institution, ORCID, Google).  As part of the authentication process, you must grant permission for funcX to access your identity information (to retrieve your email address), Globus Groups management access (to share functions and endpoints), and Globus Search (to discover functions and endpoints). "
    ]
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fxc.get_batch_status(batch_res)"
+    "fxc.get_batch_result(batch_res)"
    ]
   }
  ],
