update example notebook and fix exception setting for task

--- a/examples/AsyncFuncXExample.ipynb
+++ b/examples/AsyncFuncXExample.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "logging.getLogger('funcx.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n",
-    "\n"
+    "logging.getLogger('funcx.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
    ]
   },
   {
@@ -26,11 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tutorial_endpoint = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
-    "\n",
+    "# Public tutorial endpoint: 4b116d3c-1703-4f8f-9f6f-39921e5864df\n",
+    "tutorial_endpoint = 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa'\n",
     "\n",
     "from funcx.sdk.client import FuncXClient\n",
-    "fxc = FuncXClient(asynchronous=True)\n"
+    "fxc = FuncXClient(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
    ]
   },
   {
@@ -54,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = fxc.run([1,2,3,45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
+    "task = fxc.run([1, 2, 3, 45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
     "task\n"
    ]
   },
@@ -79,8 +78,7 @@
     "    return l/0\n",
     "\n",
     "func_id2 = fxc.register_function(boom)\n",
-    "func_id2\n",
-    "\n"
+    "func_id2\n"
    ]
   },
   {
@@ -89,19 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task2 = fxc.run([1,2,3,45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
+    "task2 = fxc.run([1, 2, 3, 45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
     "await task2\n",
-    "print(task2.result())\n",
-    "\n",
-    "\n"
+    "print(task2.result())\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -120,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
