Include stdout/stderr capture in changelog

--- a/changelog.d/20220131_083455_ward.logan.t_pincuda.rst
+++ b/changelog.d/20220131_083455_ward.logan.t_pincuda.rst
@@ -5,6 +5,7 @@
 New Functionality
 ^^^^^^^^^^^^^^^^^
 - Added option for pinning workers to different accelerators
+- Log standard error and output from workers to disk
 
 .. Bug Fixes
 .. ^^^^^^^^^
