--- a/examples/AsyncFuncXExample.ipynb
+++ b/examples/AsyncFuncXExample.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "import logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "logging.getLogger('funcx.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
+    "logging.getLogger('globus_compute_sdk.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
    ]
   },
   {
@@ -40,8 +40,8 @@
     "# Public tutorial endpoint: 4b116d3c-1703-4f8f-9f6f-39921e5864df\n",
     "tutorial_endpoint = 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa'\n",
     "\n",
-    "from funcx.sdk.client import FuncXClient\n",
-    "fxc = FuncXClient(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
+    "from globus_compute_sdk import Client\n",
+    "gcc = Client(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "    time.sleep(10)\n",
     "    return sum(nums)\n",
     "\n",
-    "func_id = fxc.register_function(sum1)\n",
+    "func_id = gcc.register_function(sum1)\n",
     "func_id\n"
    ]
   },
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "task = fxc.run([1, 2, 3, 45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
+    "task = gcc.run([1, 2, 3, 45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
     "task\n"
    ]
   },
@@ -105,7 +105,7 @@
     "def boom(l):\n",
     "    return l/0\n",
     "\n",
-    "func_id2 = fxc.register_function(boom)\n",
+    "func_id2 = gcc.register_function(boom)\n",
     "func_id2\n"
    ]
   },
@@ -119,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "task2 = fxc.run([1, 2, 3, 45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
+    "task2 = gcc.run([1, 2, 3, 45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
     "await task2\n",
     "print(task2.result())\n"
    ]
