--- a/examples/AsyncFuncXExample.ipynb
+++ b/examples/AsyncFuncXExample.ipynb
@@ -8,15 +8,16 @@
    "source": [
     "import logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "logging.getLogger('funcx.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
+    "logging.getLogger('globus_compute_sdk.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Asynchronous FuncX Example\n",
-    "This example creates an asynchronous FuncX Client and shows up to receive results"
+    "# Asynchronous Globus Compute Example\n",
+    "This example creates an asynchronous Globus Compute Client and shows up to receive results"
    ]
   },
   {
@@ -28,8 +29,8 @@
     "# Public tutorial endpoint: 4b116d3c-1703-4f8f-9f6f-39921e5864df\n",
     "tutorial_endpoint = 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa'\n",
     "\n",
-    "from funcx.sdk.client import FuncXClient\n",
-    "fxc = FuncXClient(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
+    "from globus_compute_sdk.sdk.client import Client\n",
+    "fxc = Client(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
    ]
   },
   {
