Rename some leftover funcx references

--- a/examples/AsyncFuncXExample.ipynb
+++ b/examples/AsyncFuncXExample.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "logging.getLogger('globus_compute_sdk.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -23,20 +12,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Public tutorial endpoint: 4b116d3c-1703-4f8f-9f6f-39921e5864df\n",
     "tutorial_endpoint = 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa'\n",
     "\n",
-    "from globus_compute_sdk.sdk.client import Client\n",
-    "fxc = Client(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
+    "from globus_compute_sdk import Client\n",
+    "gcc = Client(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def sum1(nums):\n",
@@ -44,24 +41,32 @@
     "    time.sleep(10)\n",
     "    return sum(nums)\n",
     "\n",
-    "func_id = fxc.register_function(sum1)\n",
+    "func_id = gcc.register_function(sum1)\n",
     "func_id\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "task = fxc.run([1, 2, 3, 45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
+    "task = gcc.run([1, 2, 3, 45, 66], function_id=func_id, endpoint_id=tutorial_endpoint)\n",
     "task\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import asyncio\n",
@@ -72,23 +77,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def boom(l):\n",
     "    return l/0\n",
     "\n",
-    "func_id2 = fxc.register_function(boom)\n",
+    "func_id2 = gcc.register_function(boom)\n",
     "func_id2\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "task2 = fxc.run([1, 2, 3, 45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
+    "task2 = gcc.run([1, 2, 3, 45, 66], function_id=func_id2, endpoint_id=tutorial_endpoint)\n",
     "await task2\n",
     "print(task2.result())\n"
    ]
