--- a/examples/AsyncFuncXExample.ipynb
+++ b/examples/AsyncFuncXExample.ipynb
@@ -3,22 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logging.getLogger('globus_compute_sdk.sdk.asynchronous.polling_task').setLevel(logging.DEBUG)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Asynchronous Globus Compute Example\n",
     "This example creates an asynchronous Globus Compute Client and shows up to receive results"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Public tutorial endpoint: 4b116d3c-1703-4f8f-9f6f-39921e5864df\n",
+    "tutorial_endpoint = 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa'\n",
+    "\n",
+    "from globus_compute_sdk.sdk.client import Client\n",
+    "gcc = Client(funcx_service_address='http://localhost:5000/api/v1', asynchronous=True)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
